[package]
name = "vinted-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["serde_derive"] }
thiserror = "1.0"
once_cell = "1.18"
rand = "0.8"
reqwest_cookie_store = "0.6"
typed-builder = "0.14"