[package]
name = "vinted-rs"
version = "0.8.6"
edition = "2021"
repository = "https://github.com/TuTarea/vinted-rs"
authors = [
    "Pepe Márquez <pepe.marquezromero@gmail.com>",
    "Álvaro Cabo <alvarocaboac2@gmail.com>",
]
description = "An async Vinted API wrapper"
license = "MIT"
readme = "README.md"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
default = ["advanced_filters", "redis"]
advanced_filters = ["bb8-postgres", "postgres-types"]
redis = ["dep:redis", "dep:redis-macros"]
minimal = []


[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["serde_derive"] }
thiserror = "1.0"
rand = "0.8"
reqwest_cookie_store = "0.6"
typed-builder = "0.18"
fang = { version = "0.10.3", features = ["asynk"], default-features = false }
redis-macros = { version = "0.2.1", optional = true }
redis = { version = "0.24.0", optional = true }
serde_json = { version = "1.0.91" }
log = "0.4.20"
lazy_static = "1.4.0"
[dev-dependencies]
redis-macros = { version = "0.2.1" }
redis = { version = "0.24.0" }

[dependencies.bb8-postgres]
version = "0.8"
features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"]
optional = true

[dependencies.postgres-types]
version = "0.2.6"
features = ["derive"]
optional = true
