[package]
name = "filter_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vinted-rs = { path = "../../", features = ["advanced_filters"]}
bb8-postgres = {version = "0.8", features = ["with-serde_json-1" , "with-uuid-1" , "with-chrono-0_4"]}
tokio = { version = "1", features = ["full"] }
